<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="366dp"
        android:layout_height="84dp"
        android:layout_marginTop="152dp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textIsSelectable="false"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bttn8"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/bttn7"
        app:layout_constraintTop_toBottomOf="@+id/bttnC" />

    <Button
        android:id="@+id/bttn7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnC" />

    <Button
        android:id="@+id/bttn5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@+id/bttn4"
        app:layout_constraintTop_toBottomOf="@+id/bttn8" />

    <Button
        android:id="@+id/bttn9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/bttn8"
        app:layout_constraintTop_toBottomOf="@+id/bttnCE" />

    <Button
        android:id="@+id/bttn6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/bttn5"
        app:layout_constraintTop_toBottomOf="@+id/bttn9" />

    <Button
        android:id="@+id/bttn1"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttn4" />

    <Button
        android:id="@+id/bttn2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/bttn1"
        app:layout_constraintTop_toBottomOf="@+id/bttn5" />

    <Button
        android:id="@+id/bttn3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@+id/bttn2"
        app:layout_constraintTop_toBottomOf="@+id/bttn6" />

    <Button
        android:id="@+id/bttn0"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttn1"
        app:layout_marginBaseline="50dp" />

    <Button
        android:id="@+id/bttnDot"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/dot"
        app:layout_constraintStart_toEndOf="@+id/bttn0"
        app:layout_constraintTop_toBottomOf="@+id/bttn3" />

    <Button
        android:id="@+id/bttnMinus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnCharClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/bttn6"
        app:layout_constraintTop_toBottomOf="@+id/bttnPlus" />

    <Button
        android:id="@+id/bttnMultipl"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnCharClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/multipl"
        app:layout_constraintStart_toEndOf="@+id/bttn3"
        app:layout_constraintTop_toBottomOf="@+id/bttnMinus" />

    <Button
        android:id="@+id/bttnDivi"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnCharClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/div"
        app:layout_constraintStart_toEndOf="@+id/bttnDot"
        app:layout_constraintTop_toBottomOf="@+id/bttnMultipl" />

    <Button
        android:id="@+id/bttnRoot"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:onClick="bttnCharClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/bttnPlus"
        app:layout_constraintTop_toBottomOf="@+id/bttnSign" />

    <Button
        android:id="@+id/bttnPlus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnCharClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/bttn9"
        app:layout_constraintTop_toBottomOf="@+id/bttnCE" />

    <Button
        android:id="@+id/bttnEql"
        android:layout_width="105dp"
        android:layout_height="195dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:onClick="bttnEqlClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/eql"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/bttnMultipl"
        app:layout_constraintTop_toBottomOf="@+id/bttnRoot" />

    <Button
        android:id="@+id/bttnSign"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:onClick="bttnSignClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/bttnCE"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/bttnC"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnDelClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/del"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/bttnCE"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnDelClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@+id/bttnC"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/bttn4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:onClick="bttnNumClick"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttn7" />

    <TextView
        android:id="@+id/tvMem"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/tvChar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvChar"
        android:layout_width="70dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/tvMain"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>